# Algorithm-Analysis-and-Design-

./: README.md
ADA 2022-1/Fourier/: Grupos.xlsx
ADA 2022-1/Fourier/Exposiciones/: FourierGrupo2.pptx  FourierGrupo5.pptx
ADA 2022-1/contest/: Grupos.xlsx  executor.cpp  test  winners.txt
ADA 2022-1/contest/horse/: horse_1.h  horse_10.h  horse_11.h  horse_12.h  horse_2.h  horse_3.h  horse_4.h  horse_5.h  horse_6.h  horse_7.h  horse_8.h  horse_9.h
ADA 2022-1/contest/maze/: maze_1.h  maze_1.txt  maze_10.h  maze_10.txt  maze_11.h  maze_11.txt  maze_12.h  maze_12.txt  maze_2.h  maze_2.txt  maze_3.h  maze_3.txt  maze_4.h  maze_4.txt  maze_5.h  maze_5.txt  maze_6.h  maze_6.txt  maze_7.h  maze_7.txt  maze_9.h  maze_9.txt
ADA 2022-1/contest/nqueens/: nqueens_1.h  nqueens_10.h  nqueens_11.h  nqueens_12.h  nqueens_2.h  nqueens_3.h  nqueens_4.h  nqueens_5.h  nqueens_6.h  nqueens_7.h  nqueens_8.h  nqueens_9.h
Final Exam/: adaFinal(pasado).txt  premisa.txt
Part 1/: 1 algebra.pptx
Part 1/Practice 1/practice 1/: ejercicio5a.cpp  ejercicio5a_V1.txt  (+6 more)
Part 1/Task 1 - Sort Algorithms/: ALGORITMOS DE ORDENAMIENTO.xlsx  COMPARACIÓN DE ALGORITMOS DE ORDENAMIENTO.docx  codes.cpp  premise.txt
Part 1/Task 2 - Clasic and Strassen Algorithm/: STRASSEN_AND_STANDARD.cpp  TAREA Matrices.txt  premise.txt
Part 1/Task 3 - Hamiltonian Circuit/: circuito_hamiltoniano_V1.cpp  circuito_hamiltoniano_V2.cpp  matrix1.txt  matrix2.txt  matrix3.txt  matrix4.txt
Part 2/: link SFML library in Clion Windows .txt  linking SDL library in Clion Windows .txt
Part 2/Project - Fast Fourier Transform/Project/AudioAnalyser_FFT/: CMakeLists.txt  analyser.cpp  analyser.h  main.cpp
Part 2/Project - Fast Fourier Transform/Project/AudioFilter_FFT/: CMakeLists.txt  FFT.h  filt.h  main.cpp
Part 2/Project - Fast Fourier Transform/Project/AudioVisualizer_FFT/: Application.cpp  Application.h  AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  main.cpp
Part 2/Project - Fast Fourier Transform/Project/AudioVisualizer_FFT_linux/: Application.cpp  Application.h  AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  example cmake 1.txt  main.cpp
Part 2/Project - Fast Fourier Transform/Project/Spectrogram_FFT/: CMakeLists.txt  FFT.cpp  FFT.h  Spectrogram.cpp  Spectrogram.h  main.cpp
Part 2/Project - NP-Complete/: Premise.txt
Part 2/Project - NP-Complete/Projects/DenseSubgraph/: Args.cpp  Args.h  CMakeLists.txt  EdgeFN.cpp  EdgeFN.h  FlowNetwork.cpp  FlowNetwork.h  Graph.cpp  Graph.h  Readme.md  main.cpp  readme please.txt
Part 2/Project - NP-Complete/Projects/DenseSubgraph/datasets/: MO.txt  OF.txt  TC.txt
Part 2/practicando usando backtracking/: contador de descompsicion bk dp.cpp  fibonacci_bk_dp.cpp  sillas_combinadas.cpp
Part 2/task 1 - horsewalk-Nqueens-Maze/: Horse_Grupo7.py  NQueens_Grupo7.py  codes.txt  codesss.txt  codigos.txt  codigosssss.txt  horseWalk.cpp  maze.cpp  maze1.txt  n-queen.cpp
Part 2/task 2 - 2Sat/: codes sat.txt  codesssss sat.txt  hypresource.tar
Partial Exam/: PREMISA.txt
(+24 files in other folders)
